--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
         </article>
     </section>
 
+    <section class="features">
+        <article>Caracteristica 1</article>
+        <article>Caracteristica 2</article>
+        <article>Caracterisitca 3</article>
+        <article>Caracterisitca 4</article>
+    </section>
+
     <section class="marcas">
         <article class="texto-marcas">
             <h2>Growing ecommerce brands rely on Matcha.</h2>
