--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </header>
     </section> -->
 
-    <section class="container-fluid">
+    <section class="container-fluid fixed-top">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a href="/" class="imagen">
