--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Plataform</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link" href="pricing.html">Pricing</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Customers</a>
