--- a/index.html
+++ b/index.html
@@ -423,6 +423,31 @@
         </div>
     </section>
 
+    <section class="try-it text-center">
+        <h2>Try Matcha free for 7 days.</h2>
+        <form class="signup-form">
+            <input type="email" placeholder="Enter email address">
+            <button>Sign Up Free →</button>
+        </form>
+        <p>Start publishing today with a free 7-day trial. <br><strong>No credit card</strong> required.</p>
+    </section>
+
+    <section class="container cta">
+        <div class="row align-items-center box">
+            <div class="col-sm">
+                <h2>Try free for 7 days. Publish your first article today!</h2>
+                <p>Want to learn more? <a href="#">Schedule a demo →</a></p>
+            </div>
+            <div class="col-sm">
+                <form class="signup-form">
+                    <input type="email" placeholder="Enter email address">
+                    <button>Sign Up Free →</button>
+                </form>
+                <p>Access Matcha’s content marketing platform free for 7 days. No credit card required. </p>
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
