--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <a class="nav-link" href="#">Resources</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="about-us.html">About</a>
                         </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0 acciones justify-content-end">
@@ -86,7 +86,7 @@
         <p class="text-gray"><strong>No credit card</strong> required. </p>
         <form>
             <input type="text">
-            <button type="submit" class="mt-2">Enviar</button>
+            <button type="submit" class="texto-boton mt-2">Enviar</button>
         </form>
 
         <figure class="banner">
